fixed restriction to loggedout user to make booking

--- a/frontend/src/components/TestSpot/ReserveFormContainer.module.css
+++ b/frontend/src/components/TestSpot/ReserveFormContainer.module.css
@@ -167,6 +167,22 @@
   opacity: 33%;
 }
 
+.btn3 {
+  margin-top: 1em;
+  height: 2.75em;
+  cursor: pointer;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: #009cd5;
+  color: white;
+  font-size: 0.75em;
+  border-radius: 0.5em;
+
+  transition: 0.2s ease all;
+  opacity: 50%;
+}
+
 .btn:hover {
   opacity: 100%;
 }
@@ -174,8 +190,6 @@
 .btn:active {
   transform: scale(0.95);
 }
-
-
 
 .detailsContainer {
   width: 75%;
