--- a/frontend/src/components/EditBookingModal/EditBookingForm.module.css
+++ b/frontend/src/components/EditBookingModal/EditBookingForm.module.css
@@ -8,8 +8,8 @@
 }
 
 .outerContainer {
-	--tw-bg-opacity: 1;
-background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
   border-radius: 1em;
   width: 46em;
   display: flex;
@@ -66,8 +66,8 @@ background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
   padding-top: 1em;
   align-self: center;
   width: 90%;
-	--tw-bg-opacity: 1;
-background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 
 .title,
@@ -84,7 +84,7 @@ background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 
 .subtitle {
-  margin-top: .75em;
+  margin-top: 0.75em;
   font-size: 1rem;
   color: #009cd5;
   font-weight: normal;
@@ -100,7 +100,6 @@ background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 
 .middleHeader {
   font-weight: bold;
-
   font-size: 1.125em;
   grid-column: span 2 / span 2;
 }
@@ -198,7 +197,7 @@ background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
   left: 0em;
   top: 0em;
   margin-top: 1em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -209,12 +208,9 @@ background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
   cursor: pointer;
 }
 
-
 .btnSubmit2 {
   margin-left: 1em;
 }
-
-
 
 .btnSubmit2 {
   width: 7.5em;
@@ -226,14 +222,10 @@ background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
   opacity: 40%;
   transition-duration: 150ms;
   border-radius: 0.5em;
-
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
-
-
 
 .btnSubmit2 {
   background-color: #009cd5;
