--- a/frontend/src/components/SignupFormPage/SignupForm.module.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.module.css
@@ -4,7 +4,7 @@
   opacity: 90%;
   display: flex;
   flex-direction: column;
-  animation: fadein .5s;
+  animation: fadein 0.5s;
 }
 
 .signupLabel {
@@ -27,6 +27,7 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 .signupInput,
 input[type="textarea"] {
   --tw-bg-opacity: 1;
@@ -108,9 +109,10 @@ input[type="textarea"] {
   align-self: center;
   gap: 0.75em;
 }
+
 .headerFooter {
   margin: 0 auto;
-  margin-top: .5em;
+  margin-top: 0.5em;
   font-size: 0.9em;
 }
 
@@ -129,7 +131,7 @@ input[type="textarea"] {
 
 .title {
   font-weight: bold;
-  margin-top: .5em;
+  margin-top: 0.5em;
   font-size: 1.25em;
   padding-right: 0.5em;
 }
