--- a/frontend/src/components/TestSpot/ReviewFormContainer.module.css
+++ b/frontend/src/components/TestSpot/ReviewFormContainer.module.css
@@ -3,7 +3,6 @@
   margin-bottom: 5em;
   width: 50%;
   height: 24.25em;
-
   --tw-bg-opacity: 1;
   background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
   margin-left: 5em;
@@ -40,6 +39,7 @@
   height: 1.75em;
   color: rgb(209, 213, 219);
 }
+
 .label {
   margin-left: 1em;
   font-size: 1.125em;
@@ -92,7 +92,6 @@
   margin-top: 1em;
   height: 5em;
   width: 75%;
-
   outline: none;
   color: rgb(229, 231, 235);
   opacity: 90%;
@@ -119,27 +118,24 @@
   transform: scale(0.85);
 }
 
-
 .error {
   animation: fadein 0.5s;
   position: absolute;
-top: 61.5em;
-left: 10.5em;
+  top: 61.5em;
+  left: 10.5em;
   color: #009cd5;
-  font-size: .75em;
+  font-size: 0.75em;
   font-weight: bold;
 }
 
 .thankYou {
-
-  animation: fadein .75s;
+  animation: fadein 0.75s;
   position: absolute;
-top: 61.5em;
-left: 10.5em;
+  top: 61.5em;
+  left: 10.5em;
   color: #009cd5;
-  font-size: .75em;
+  font-size: 0.75em;
   font-weight: bold;
-
 }
 
 @keyframes fadein {
