--- a/frontend/src/components/BookingConfirmationModal/ConfirmationForm.module.css
+++ b/frontend/src/components/BookingConfirmationModal/ConfirmationForm.module.css
@@ -162,7 +162,7 @@
   outline: none;
   border: none;
   color: white;
-  opacity: 80%;
+  opacity: .8;
   transition-duration: 150ms;
   border-radius: 0.5em;
   cursor: pointer;
@@ -173,12 +173,12 @@
 
 .btnSubmit:hover,
 .btnCancel:hover {
-  opacity: 100%;
+  opacity: 1;
 }
 
 .btnSubmit:active,
 .btnCancel:active {
-  opacity: 100%;
+  opacity: 1;
   transform: scale(0.925);
 }
 
