--- a/frontend/src/components/EditBookingModal/EditBookingForm.module.css
+++ b/frontend/src/components/EditBookingModal/EditBookingForm.module.css
@@ -162,7 +162,7 @@
   outline: none;
   border: none;
   color: white;
-  opacity: 80%;
+  opacity: .8;
   transition-duration: 150ms;
   border-radius: 0.5em;
   cursor: pointer;
@@ -173,12 +173,12 @@
 
 .btnSubmit:hover,
 .btnCancel:hover {
-  opacity: 100%;
+  opacity: 1;
 }
 
 .btnSubmit:active,
 .btnCancel:active {
-  opacity: 100%;
+  opacity: 1;
   transform: scale(0.925);
 }
 
@@ -219,7 +219,7 @@
   outline: none;
   border: none;
   color: white;
-  opacity: 40%;
+  opacity: .4;
   transition-duration: 150ms;
   border-radius: 0.5em;
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
