--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -34,7 +34,6 @@
   top: 0;
   z-index: 100;
   display: grid;
-  /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
   grid-template-columns: 1fr 2fr 1fr;
   --tw-bg-opacity: 1;
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -56,7 +55,7 @@
   cursor: pointer;
   margin-right: 0.5em;
   position: absolute;
-  opacity: 85%;
+  opacity: .85;
   transition-duration: 150ms;
   right: 0;
 }
@@ -66,7 +65,7 @@
 }
 
 .searchIcon:hover {
-  opacity: 95%;
+  opacity: .95;
 }
 
 .middleHeader {
@@ -172,7 +171,7 @@
 }
 
 .dropDownMenu {
-  opacity: 97.5%;
+  opacity: .975;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -197,7 +196,7 @@
     opacity: 0;
   }
   to {
-    opacity: 97.5%;
+    opacity: .975;
   }
 }
 
@@ -207,7 +206,7 @@
   transition: 0.2s ease all;
   cursor: pointer;
   outline: none;
-  opacity: 75%;
+  opacity: .75;
   font-weight: bold;
   border: none;
   border-radius: 0.25em;
@@ -233,7 +232,7 @@
   color: white;
   background: #009cd5;
   border: none;
-  opacity: 80%;
+  opacity: .8;
 }
 
 .headerNavLink {
@@ -241,7 +240,7 @@
   margin-bottom: 0.5em;
   cursor: pointer;
   outline: none;
-  opacity: 75%;
+  opacity: .75;
   border: none;
   border-radius: 0.25em;
   text-decoration: none;
@@ -260,7 +259,7 @@
 
 .headerNavLink:hover {
   border: none;
-  opacity: 90%;
+  opacity: .9;
 }
 
 .dateRangePickerContainer {
@@ -286,7 +285,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  opacity: 75%;
+  opacity: .75;
   transform: scale(1.125);
   transition: 0.2s ease all;
   text-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -301,7 +300,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  opacity: 75%;
+  opacity: .75;
   transform: scale(1.125);
   transition: 0.2s ease all;
   text-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -310,7 +309,7 @@
 
 .submitSearchBtn:hover {
   transform: scale(1.125);
-  opacity: 100%;
+  opacity: 1;
 }
 .submitSearchBtn:active {
   transform: scale(0.75);
@@ -318,7 +317,7 @@
 
 .cancelSearchBtn:hover {
   transform: scale(1.125);
-  opacity: 100%;
+  opacity: 1;
 }
 .cancelSearchBtn:active {
   transform: scale(0.75);
@@ -369,7 +368,7 @@
   transition: 0.2s ease all;
   align-items: center;
   font-size: 0.625em;
-  opacity: 92.5%;
+  opacity: .925;
   align-self: center;
   border-bottom: 0.0625em solid #009cd5;
   color: #009cd5;
@@ -388,7 +387,7 @@
 .menuItem:hover {
   color: white;
   background-color: #009cd5;
-  opacity: 75%;
+  opacity: .75;
   transform: scale(1.03);
 }
 
