--- a/frontend/src/components/TestBookings/BookingContainer.module.css
+++ b/frontend/src/components/TestBookings/BookingContainer.module.css
@@ -30,7 +30,7 @@
 }
 
 .resultsContainer:hover {
-  opacity: 95%;
+  opacity: .95;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -45,11 +45,11 @@
   justify-content: space-between;
   cursor: pointer;
   transition-duration: 200ms;
-  opacity: 95%;
+  opacity: .95;
 }
 
 .imgContainer:hover {
-  opacity: 100%;
+  opacity: 1;
 }
 
 .spotName {
