--- a/frontend/src/components/TestSpot/ReserveFormContainer.module.css
+++ b/frontend/src/components/TestSpot/ReserveFormContainer.module.css
@@ -146,7 +146,7 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: 85%;
+  opacity: .85;
 }
 
 .btn2 {
@@ -160,7 +160,7 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: 33%;
+  opacity: .33;
 }
 
 .btn3 {
@@ -175,11 +175,11 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: 50%;
+  opacity: .5;
 }
 
 .btn3:hover {
-  opacity: 85%;
+  opacity: .85;
 }
 
 .btn3:active {
@@ -187,7 +187,7 @@
 }
 
 .btn:hover {
-  opacity: 85%;
+  opacity: .85;
 }
 
 .btn:active {
