--- a/frontend/src/components/TestSpot/ReviewFormContainer.module.css
+++ b/frontend/src/components/TestSpot/ReviewFormContainer.module.css
@@ -94,7 +94,7 @@
   width: 75%;
   outline: none;
   color: rgb(229, 231, 235);
-  opacity: 90%;
+  opacity: .9;
   border: none;
   background-color: #009cd5;
   border-radius: 1.25em;
@@ -111,7 +111,7 @@
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  opacity: 100%;
+  opacity: 1;
 }
 
 .btn:active {
