--- a/frontend/src/components/TestSpots/SpotsContainer.module.css
+++ b/frontend/src/components/TestSpots/SpotsContainer.module.css
@@ -35,7 +35,7 @@
   justify-items: center;
   justify-self: center;
   cursor: pointer;
-  opacity: 90%;
+  opacity: .9;
   align-content: center;
   align-items: center;
   align-self: center;
@@ -62,7 +62,7 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
-  opacity: 90%;
+  opacity: .9;
   transition: 0.33s ease all;
   border-radius: 0.5em;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
@@ -79,7 +79,7 @@
 }
 
 .img:hover {
-  opacity: 100%;
+  opacity: 1;
   transform: scale(1.025);
 }
 .img:active {
