--- a/frontend/src/components/Header/HeaderComponent.module.css
+++ b/frontend/src/components/Header/HeaderComponent.module.css
@@ -11,11 +11,7 @@
   display: flex;
   justify-content: center;
   z-index: 101;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   align-items: center;
-  align-self: center;
   cursor: pointer;
   padding: 0.5em 1.5em;
   transition-duration: 150ms;
@@ -55,7 +51,7 @@
   cursor: pointer;
   margin-right: 0.5em;
   position: absolute;
-  opacity: .85;
+  opacity: 0.85;
   transition-duration: 150ms;
   right: 0;
 }
@@ -65,7 +61,7 @@
 }
 
 .searchIcon:hover {
-  opacity: .95;
+  opacity: 0.95;
 }
 
 .middleHeader {
@@ -122,13 +118,9 @@
   font-weight: bold;
   display: flex;
   justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   align-items: center;
   --tw-border-opacity: 1;
   border-color: rgba(75, 85, 99, var(--tw-border-opacity));
-  align-self: center;
 }
 
 @keyframes fadein2 {
@@ -151,7 +143,6 @@
 
 .rightIconsContainer {
   display: flex;
-
   flex-direction: row-reverse;
   border: 0.0625em solid black;
   border-radius: 0.5em;
@@ -171,7 +162,7 @@
 }
 
 .dropDownMenu {
-  opacity: .975;
+  opacity: 0.975;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -196,7 +187,7 @@
     opacity: 0;
   }
   to {
-    opacity: .975;
+    opacity: 0.975;
   }
 }
 
@@ -206,7 +197,7 @@
   transition: 0.2s ease all;
   cursor: pointer;
   outline: none;
-  opacity: .75;
+  opacity: 0.75;
   font-weight: bold;
   border: none;
   border-radius: 0.25em;
@@ -232,7 +223,7 @@
   color: white;
   background: #009cd5;
   border: none;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .headerNavLink {
@@ -240,14 +231,14 @@
   margin-bottom: 0.5em;
   cursor: pointer;
   outline: none;
-  opacity: .75;
+  opacity: 0.75;
   border: none;
   border-radius: 0.25em;
   text-decoration: none;
   font-size: 0.775em;
   padding: 0.5em;
   display: flex;
-  justify-content: Center;
+  justify-content: center;
   align-self: center;
   color: white;
   transition: 0.2s ease all;
@@ -259,7 +250,7 @@
 
 .headerNavLink:hover {
   border: none;
-  opacity: .9;
+  opacity: 0.9;
 }
 
 .dateRangePickerContainer {
@@ -285,7 +276,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  opacity: .75;
+  opacity: 0.75;
   transform: scale(1.125);
   transition: 0.2s ease all;
   text-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -300,7 +291,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  opacity: .75;
+  opacity: 0.75;
   transform: scale(1.125);
   transition: 0.2s ease all;
   text-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -329,11 +320,7 @@
   color: #009cd5;
   display: flex;
   justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   align-items: center;
-  align-self: center;
 }
 
 .outerContainer {
@@ -343,11 +330,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   align-items: center;
-  align-self: center;
   position: absolute;
   bottom: 0;
   transform: translate(-11%, 95%);
@@ -361,14 +344,11 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   cursor: pointer;
   transition: 0.2s ease all;
   align-items: center;
   font-size: 0.625em;
-  opacity: .925;
+  opacity: 0.925;
   align-self: center;
   border-bottom: 0.0625em solid #009cd5;
   color: #009cd5;
@@ -387,7 +367,7 @@
 .menuItem:hover {
   color: white;
   background-color: #009cd5;
-  opacity: .75;
+  opacity: 0.75;
   transform: scale(1.03);
 }
 
