--- a/frontend/src/components/LogInComponent/LogInComponent.module.css
+++ b/frontend/src/components/LogInComponent/LogInComponent.module.css
@@ -45,6 +45,7 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 .signupInput,
 input[type="textarea"] {
   --tw-bg-opacity: 1;
@@ -87,15 +88,11 @@ input[type="textarea"] {
   flex-direction: column;
   gap: 0.75em;
   justify-content: center;
-  justify-items: center;
   color: rgb(107, 114, 128);
-  align-content: center;
   align-items: center;
-  align-self: center;
   padding-bottom: 0.75em;
   list-style: none;
   text-align: center;
-
   margin-right: 3em;
   width: 90%;
   font-size: 0.75em;
@@ -120,17 +117,13 @@ input[type="textarea"] {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   align-items: center;
-  align-self: center;
   gap: 0.75em;
 }
 .headerFooter {
   margin: 0 auto;
   color: rgb(107, 114, 128);
-  font-size: 0.9em;
+  /* font-size: 0.9em; */
   font-size: 0.75em;
 }
 
