--- a/frontend/src/components/Map/MapComponent.module.css
+++ b/frontend/src/components/Map/MapComponent.module.css
@@ -1,5 +1,5 @@
 .pin {
-  opacity: .675;
+  opacity: 0.675;
   transition: 0.2s ease all;
   animation: bounce 0.75s infinite;
   cursor: pointer;
@@ -19,20 +19,16 @@
 
 .popUp {
   color: black;
-  opacity: .5;
+  opacity: 0.5;
   display: flex;
   justify-content: center;
   font-size: 0.65em;
-  justify-items: center;
-  justify-self: center;
-  align-content: center;
   transition-duration: 150ms;
   align-items: center;
-  align-self: center;
   cursor: pointer;
 }
 
 .popUp:hover {
-  opacity: .65;
+  opacity: 0.65;
   color: #009cd5;
 }
