fixed login and sign in bugs, fixed spot page reserve without dates bug, fixed confirm modal cancel button bug

--- a/frontend/src/components/SignupFormPage/SignupForm.module.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.module.css
@@ -109,7 +109,7 @@ input[type="textarea"] {
 }
 
 .link {
-  text-decoration: none;
+  text-decoration: underline;
   transition: 0.2s ease all;
   color: black;
   opacity: .75;
