fixed delete booking bug without page refresh, fixated loader on bookings page fixing the no bookings bug for split second, and fixed the ordering of bookings by sorting by coming up bookings

--- a/frontend/src/components/CancelBookingConfirmationModal/ConfirmationForm.module.css
+++ b/frontend/src/components/CancelBookingConfirmationModal/ConfirmationForm.module.css
@@ -13,6 +13,7 @@
   border-radius: 1em;
   width: 100%;
   display: flex;
+
   flex-direction: column;
   justify-content: center;
   transition-duration: 150ms;
@@ -22,6 +23,10 @@
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.backContainer {
+  position: relative;
 }
 
 .outerContainer:hover {
