--- a/frontend/src/components/Map/MapComponent.module.css
+++ b/frontend/src/components/Map/MapComponent.module.css
@@ -3,6 +3,7 @@
   transition: 0.2s ease all;
   animation: bounce 0.75s infinite;
   cursor: pointer;
+  font-size: 1.5em;
 }
 
 @keyframes bounce {
@@ -25,6 +26,7 @@
   font-size: 0.65em;
   transition-duration: 150ms;
   align-items: center;
+  font-size: 1em;
   cursor: pointer;
 }
 
