fixed editing dates bug

--- a/frontend/src/components/BookingConfirmationModal/ConfirmationForm.module.css
+++ b/frontend/src/components/BookingConfirmationModal/ConfirmationForm.module.css
@@ -173,3 +173,11 @@
   --tw-bg-opacity: 1;
   background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
+
+
+.loaderCotnainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
