--- a/frontend/src/components/EditBookingModal/EditBookingForm.module.css
+++ b/frontend/src/components/EditBookingModal/EditBookingForm.module.css
@@ -7,6 +7,7 @@
   }
 }
 
+
 .outerContainer {
   --tw-bg-opacity: 1;
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
@@ -143,7 +144,7 @@
   outline: none;
   border: none;
   color: white;
-  opacity: .8;
+  opacity: 0.8;
   transition-duration: 150ms;
   border-radius: 0.5em;
   cursor: pointer;
@@ -196,7 +197,7 @@
   outline: none;
   border: none;
   color: white;
-  opacity: .4;
+  opacity: 0.4;
   transition-duration: 150ms;
   border-radius: 0.5em;
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
