--- a/frontend/src/components/BookingConfirmationModal/Sorry.module.css
+++ b/frontend/src/components/BookingConfirmationModal/Sorry.module.css
@@ -163,7 +163,7 @@
   outline: none;
   border: none;
   color: white;
-  opacity: .8;
+  opacity: 0.8;
   transition-duration: 150ms;
   border-radius: 0.5em;
   cursor: pointer;
