--- a/frontend/src/components/Search/SearchContainer.module.css
+++ b/frontend/src/components/Search/SearchContainer.module.css
@@ -24,7 +24,6 @@
   transform: translate(-50%, -50%);
 }
 
-
 .detailContainer {
   display: flex;
   position: relative;
@@ -62,6 +61,10 @@
   margin-left: 2.5em;
 }
 
+.resultsHeader span {
+  color: #009cd5;
+}
+
 .resultsContainer {
   display: flex;
   flex-direction: column;
@@ -75,7 +78,7 @@
 }
 
 .resultsContainer:hover {
-  opacity: .95;
+  opacity: 0.95;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -132,7 +135,7 @@
   transition: 0.2s ease all;
   margin-right: 5em;
   width: 25em;
-  height: 40em;
+  height: 50em;
 }
 
 /* .map:hover {
@@ -145,7 +148,7 @@
 } */
 
 .outerContainer {
-  height: 55em;
+  height: auto;
   display: flex;
   justify-content: center;
 }
