--- a/frontend/src/components/Spot/ReserveFormContainer.module.css
+++ b/frontend/src/components/Spot/ReserveFormContainer.module.css
@@ -132,7 +132,7 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .btn4 {
@@ -147,7 +147,7 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: .50;
+  opacity: 0.5;
 }
 
 .btn2 {
@@ -161,7 +161,7 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: .33;
+  opacity: 0.33;
 }
 
 .btn3 {
@@ -176,11 +176,11 @@
   font-size: 0.75em;
   border-radius: 0.5em;
   transition: 0.2s ease all;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .btn3:hover {
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .btn3:active {
@@ -188,7 +188,7 @@
 }
 
 .btn:hover {
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .btn:active {
